learn notes